project('Async_Sources')
async_sources = [
'Loop.cxx',
'Call.cxx',
'DeferEvent.cxx',
'IdleEvent.cxx',
'InjectEvent.cxx',
'SocketEvent.cxx',
'SignalMonitor.cxx',
'TimerWheel.cxx',
'TimerList.cxx',
'CoarseTimerEvent.cxx',
'FineTimerEvent.cxx',
'net/ConnectSocket.cxx',
'net/cares/Error.cxx',
'net/cares/Init.cxx',
'net/cares/Channel.cxx',
'net/cares/SimpleResolver.cxx',
'../io/async/AsioThread.cpp',
'../io/async/GlobalAsioThread.cpp'
 ]
