project('Audio_Sources')
audio_sources = [
'ToneSynthesiser.cpp',
'VarioSynthesiser.cpp',
'PCMPlayer.cpp',
'GlobalPCMResourcePlayer.cpp',
'GlobalPCMMixer.cpp',
'GlobalVolumeController.cpp',
'MixerPCMPlayer.cpp',
'PCMBufferDataSource.cpp',
'PCMMixerDataSource.cpp',
'PCMMixer.cpp',
'PCMResourcePlayer.cpp',
'VolumeController.cpp',
'ALSAEnv.cpp',
'ALSAPCMPlayer.cpp'
 ]
