project('Computer_Sources')
computer_sources = [
'Wind/CirclingWind.cpp',
'Wind/MeasurementList.cpp',
'Wind/Store.cpp',
'Wind/WindEKF.cpp',
'Wind/WindEKFGlue.cpp',
'Wind/Settings.cpp',
'ClimbAverageCalculator.cpp',
'ConditionMonitor/ConditionMonitor.cpp',
'ConditionMonitor/ConditionMonitorAATTime.cpp',
'ConditionMonitor/ConditionMonitorFinalGlide.cpp',
'ConditionMonitor/ConditionMonitorGlideTerrain.cpp',
'ConditionMonitor/ConditionMonitorLandableReachable.cpp',
'ConditionMonitor/ConditionMonitorSunset.cpp',
'ConditionMonitor/ConditionMonitorWind.cpp',
'ConditionMonitor/ConditionMonitors.cpp',
'ConditionMonitor/AirspaceEnterMonitor.cpp',
'ConditionMonitor/MoreConditionMonitors.cpp',
'CuComputer.cpp',
'FlyingComputer.cpp',
'CirclingComputer.cpp',
'ThermalBandComputer.cpp',
'Wind/Computer.cpp',
'ContestComputer.cpp',
'TraceComputer.cpp',
'WarningComputer.cpp',
'ThermalRecency.cpp',
'ThermalLocator.cpp',
'ThermalBase.cpp',
'LiftDatabaseComputer.cpp',
'LogComputer.cpp',
'AverageVarioComputer.cpp',
'GlideRatioCalculator.cpp',
'GlideRatioComputer.cpp',
'GlideComputer.cpp',
'GlideComputerBlackboard.cpp',
'GlideComputerAirData.cpp',
'WaveComputer.cpp',
'StatsComputer.cpp',
'RouteComputer.cpp',
'TaskComputer.cpp',
'GlideComputerInterface.cpp',
'Events.cpp',
'BasicComputer.cpp',
'GroundSpeedComputer.cpp',
'AutoQNH.cpp',
'Settings.cpp'
 ]
