project('Contest_Sources')
contest_sources = [
'Settings.cpp',
'ContestManager.cpp',
'Solvers/Contests.cpp',
'Solvers/AbstractContest.cpp',
'Solvers/TraceManager.cpp',
'Solvers/ContestDijkstra.cpp',
'Solvers/DMStQuad.cpp',
'Solvers/OLCLeague.cpp',
'Solvers/OLCSprint.cpp',
'Solvers/OLCClassic.cpp',
'Solvers/TriangleContest.cpp',
'Solvers/OLCTriangleRules.cpp',
'Solvers/OLCFAI.cpp',
'Solvers/OLCPlus.cpp',
'Solvers/DMStQuad.cpp',
'Solvers/XContestFree.cpp',
'Solvers/XContestTriangle.cpp',
'Solvers/OLCSISAT.cpp',
'Solvers/NetCoupe.cpp',
'Solvers/Retrospective.cpp',
'Solvers/WeglideFree.cpp',
'Solvers/WeglideDistance.cpp',
'Solvers/WeglideFAI.cpp',
'Solvers/WeglideOR.cpp',
'Solvers/Charron.cpp',

 ]
