project('Form_Sources')
form_sources = [
'../UIUtil/KineticManager.cpp',
'../Renderer/TextRenderer.cpp',
'../Renderer/TabRenderer.cpp',
'../Renderer/ButtonRenderer.cpp',
'../Renderer/TextButtonRenderer.cpp',
'../Renderer/SymbolRenderer.cpp',
'../Renderer/SymbolButtonRenderer.cpp',
'../Renderer/BitmapButtonRenderer.cpp',
'../Renderer/ColorButtonRenderer.cpp',
'Control.cpp',
'Panel.cpp',
'VScrollPanel.cpp',
'Form.cpp',
'Button.cpp',
'ButtonPanel.cpp',
'CheckBox.cpp',
'Frame.cpp',
'Draw.cpp',
'../ui/control/List.cpp',
'../ui/control/ScrollBar.cpp',
'Edit.cpp',
'DigitEntry.cpp',
'TabDisplay.cpp',
'TabMenuDisplay.cpp',
'CharacterButton.cpp',
'GridView.cpp',
'HLine.cpp'
 ]
