project('Http_Sources')

http_sources = [
'DownloadManager.cpp',
'Progress.cpp',
'../../lib/curl/OutputStreamHandler.cxx',
#'FormData.cpp',  # I don't think this source is required. Why is it here?
'../../lib/curl/Adapter.cxx',
'../../lib/curl/Setup.cxx',
'../../lib/curl/Request.cxx',
'../../lib/curl/CoRequest.cxx',
'../../lib/curl/CoStreamRequest.cxx',
'CoDownloadToFile.cpp',
'../../lib/curl/Global.cxx',
'Init.cpp'
 ]
