project('Infobox_Sources')
infobox_sources = [
'Content/Factory.cpp',
'Content/Alternate.cpp',
'Content/Base.cpp',
'Content/Altitude.cpp',
'Content/Direction.cpp',
'Content/Glide.cpp',
'Content/MacCready.cpp',
'Content/Other.cpp',
'Content/Speed.cpp',
'Content/Task.cpp',
'Content/Places.cpp',
'Content/Contest.cpp',
'Content/Team.cpp', 
'Content/Terrain.cpp',
'Content/Thermal.cpp',
'Content/Time.cpp',
'Content/Trace.cpp',
'Content/Weather.cpp',
'Content/Airspace.cpp',
'Content/Radio.cpp',
'Data.cpp',
'Format.cpp',
'Units.cpp',
'InfoBoxSettings.cpp',
'InfoBoxWindow.cpp',
'InfoBoxLayout.cpp',
'InfoBoxManager.cpp',
'Panel/AltitudeInfo.cpp',
'Panel/AltitudeSimulator.cpp',
'Panel/AltitudeSetup.cpp',
'Panel/MacCreadyEdit.cpp',
'Panel/MacCreadySetup.cpp',
'Panel/WindEdit.cpp',
'Panel/ATCReference.cpp',
'Panel/RadioEdit.cpp'
 ]
