project('Look_Sources')
look_sources = [
'AutoFont.cpp',
'Look.cpp',
'DialogLook.cpp',
'ButtonLook.cpp',
'CheckBoxLook.cpp',
'TerminalLook.cpp',
'VarioLook.cpp',
'ChartLook.cpp',
'MapLook.cpp',
'OverlayLook.cpp',
'TopographyLook.cpp',
'WindArrowLook.cpp',
'ThermalBandLook.cpp',
'TraceHistoryLook.cpp',
'AirspaceLook.cpp',
'TrailLook.cpp',
'CrossSectionLook.cpp',
'GestureLook.cpp',
'HorizonLook.cpp',
'TaskLook.cpp',
'TrafficLook.cpp',
'InfoBoxLook.cpp',
'WaypointLook.cpp',
'AircraftLook.cpp',
'NOAALook.cpp',
'FinalGlideBarLook.cpp',
'FlarmTrafficLook.cpp',
'VarioBarLook.cpp',
'IconLook.cpp',
'ThermalAssistantLook.cpp',
'WaveLook.cpp',
'ClimbPercentLook.cpp'
 ]
