project('Lua_Sources')
lua_sources = [
'Ptr.cpp',
'Error.cxx',
'Catch.cpp',
'Persistent.cpp',
'Background.cpp',
'Associate.cpp',
'RunFile.cxx',
'StartFile.cpp',
'Log.cpp',
'Http.cpp',
'Timer.cpp',
'Geo.cpp',
'Map.cpp',
'Blackboard.cpp',
'Airspace.cpp',
'Dialogs.cpp',
'Legacy.cpp',
'Full.cpp',
'Basic.cpp',
'Task.cpp',
'Settings.cpp',
'Wind.cpp',
'Logger.cpp',
'Tracking.cpp',
'Replay.cpp',
'InputEvent.cpp',

 ]
