project('MapWindow_Sources')
mapwindow_sources = [
'MapWindowBlackboard.cpp',
'MapCanvas.cpp',
'StencilMapCanvas.cpp',
'Items/MapItem.cpp',
'Items/OverlayMapItem.cpp',
'Items/List.cpp',
'Items/Builder.cpp',
'Items/AirspaceBuilder.cpp',
'Items/TrafficBuilder.cpp',
'Items/WeatherBuilder.cpp',
'MapWindow.cpp',
'MapWindowEvents.cpp',
'MapWindowGlideRange.cpp',
'../Projection/MapWindowProjection.cpp',
'MapWindowRender.cpp',
'MapWindowSymbols.cpp',
'MapWindowContest.cpp',
'MapWindowTask.cpp',
'MapWindowThermal.cpp',
'MapWindowTraffic.cpp',
'MapWindowTrail.cpp',
'MapWindowWaypoints.cpp',
'GlueMapWindow.cpp',
'GlueMapWindowItems.cpp',
'GlueMapWindowEvents.cpp',
'GlueMapWindowOverlays.cpp',
'GlueMapWindowDisplayMode.cpp',
'TargetMapWindow.cpp',
'TargetMapWindowEvents.cpp',
'TargetMapWindowDrag.cpp',
'OverlayBitmap.cpp'
 ]
