project('Math_Sources')
math_sources = [
'Angle.cpp',
'ARange.cpp',
'FastMath.cpp',
'FastTrig.cpp',
'FastRotation.cpp',
'LeastSquares.cpp',
'DiffFilter.cpp',
'Filter.cpp',
'ZeroFinder.cpp',
'KalmanFilter1d.cpp',
'SelfTimingKalmanFilter1d.cpp',
'XYDataStore.cpp',
'ConvexFilter.cpp',
'Histogram.cpp'
 ]
