project('Port_Sources')
port_sources = [
'Port.cpp',
'BufferedPort.cpp',
'SocketPort.cpp',
'UDPPort.cpp',
'TCPPort.cpp',
'K6BtPort.cpp',
'DumpPort.cpp',
'NullPort.cpp',
'TTYEnumerator.cpp',
'TTYPort.cpp',
'TCPClientPort.cpp'
 ]
port_cpp_args = [
'-Wno-error=redundant-decls',
'-Wno-redundant-decls',
 ]  # This is necessary for boost. Don't fully understand why.
