project('Screen_Sources')
screen_sources = [
'Debug.cpp',
'../ui/window/Init.cpp',
'../Renderer/ProgressBarRenderer.cpp',
'../ui/control/ProgressBar.cpp',
'../ui/canvas/Ramp.cpp',
'../ui/canvas/Util.cpp',
'../ui/canvas/Icon.cpp',
'../ui/canvas/Canvas.cpp',
'../ui/canvas/Color.cpp',
'../ui/canvas/BufferCanvas.cpp',
'../ui/window/Window.cpp',
'../ui/window/ContainerWindow.cpp',
'../ui/window/SolidContainerWindow.cpp',
'../ui/window/BufferWindow.cpp',
'../ui/window/DoubleBufferWindow.cpp',
'../ui/window/SingleWindow.cpp',
'../ui/canvas/freetype/Font.cpp',
'../ui/canvas/freetype/Init.cpp',
'../ui/display/x11/Display.cpp',
'../ui/window/x11/TopWindow.cpp',
'../ui/display/opengl/Display.cpp',
'../ui/canvas/custom/Cache.cpp',
'../ui/canvas/opengl/Init.cpp',
'../ui/canvas/opengl/Dynamic.cpp',
'../ui/canvas/opengl/Rotate.cpp',
'../ui/canvas/opengl/Geo.cpp',
'../ui/canvas/opengl/Globals.cpp',
'../ui/canvas/opengl/Extension.cpp',
'../ui/canvas/opengl/VertexArray.cpp',
'../ui/canvas/opengl/ConstantAlpha.cpp',
'../ui/canvas/opengl/Bitmap.cpp',
'../ui/canvas/opengl/RawBitmap.cpp',
'../ui/canvas/opengl/Canvas.cpp',
'../ui/canvas/opengl/BufferCanvas.cpp',
'../ui/canvas/opengl/TopCanvas.cpp',
'../ui/canvas/opengl/SubCanvas.cpp',
'../ui/canvas/opengl/Texture.cpp',
'../ui/canvas/opengl/UncompressedImage.cpp',
'../ui/canvas/opengl/Buffer.cpp',
'../ui/canvas/opengl/Shapes.cpp',
'../ui/canvas/opengl/Shaders.cpp',
'../ui/canvas/opengl/CanvasRotateShift.cpp',
'../ui/canvas/opengl/Triangulate.cpp',


'../ui/canvas/custom/Files.cpp',
'../ui/canvas/custom/Bitmap.cpp',
'../ui/canvas/custom/ResourceBitmap.cpp',
'../ui/canvas/glx/TopCanvas.cpp',
'../ui/window/poll/TopWindow.cpp',
'../ui/window/fb/Window.cpp',
'../ui/window/fb/SingleWindow.cpp',
'../ui/linux/GraphicsTTY.cpp'
 ]
