project('Screencustom_Sources')
screencustom_sources = [
'DoubleClick.cpp',
'../../canvas/custom/GeoBitmap.cpp',
'../../canvas/custom/Pen.cpp',
'../../control/custom/LargeTextWindow.cpp',
'Window.cpp',
'WList.cpp',
'ContainerWindow.cpp',
'TopWindow.cpp',
'SingleWindow.cpp',
'../../canvas/custom/MoreCanvas.cpp'
 ]
